--- a/android_ui/app/src/main/res/layout/login_screen.xml
+++ b/android_ui/app/src/main/res/layout/login_screen.xml
@@ -72,7 +72,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:text="@string/login" />
+            android:text="@string/buttonName" />
 
         <TextView
             android:id="@+id/sign_up_button"
